# Pomodoro

./: .gitignore  .prod.env  Makefile  alembic.ini  async_test.py  dependency.py  docker-compose.yml  exception.py  fixtures.py  main.py  pomodoro_db.sqlite  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 37e117c5cfda_user_id_in_tasks_2.py  4b49a948f73a_added_account_table.py  61b6a1498b73_access_token_deleted_2.py  701dc113e61f_access_token_deleted.py  734d371938e2_access_token_nullable_2.py  9ae33eab2488_access_token_nullable_i_forgot_.py  a63ef3e57c7b_added_account_table.py  acf4c808b1d6_user_id_in_tasks_false_2.py  c442d4a82b10_user_id_in_tasks.py  c8fe2a643016_access_token_nullable_2.py  cf98f3833b94_added_account_table.py  d2aa798aa87c_access_token_nullable.py  d6c233711d3c_user_id_in_tasks_false.py
cache/: accessor.py
client/: google_client.py  yandex_client.py
database/: accessor.py  database.py  models.py
handlers/: auth.py  ping.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
